--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <h3>
-        <a href="#"><br><br>
+        <a href="https://pragati200.github.io/Flex/"><br><br>
             Question-2 : Create a Flex and use images in it. </a>
         </h3>
 </body>
